# ZeroTwo

./: .gitignore  main.py
.qodo/: history.sqlite
zero-two-bot/: main.py  pyproject.toml
zero-two-bot/attached_assets/: Pasted-import-httpx-from-io-import-BytesIO-from-PIL-import-Image-async-def-generate-zero-two-prompt-ad-1741122167011.txt  Pasted-import-os-import-asyncio-from-io-import-BytesIO-from-PIL-import-Image-import-httpx-from-aiogram-1741122757367.txt  Pasted-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-import-asyncio-import--1741097167149.txt  Pasted-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-import-asyncio-import--1741098519403.txt  Pasted-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-import-asyncio-import--1741103376737.txt  Pasted-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-import-asyncio-import--1741122872691.txt  Pasted-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-import-asyncio-import-http-1741097151163.txt  Pasted-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-import-asyncio-import-http-1741098508243.txt  Pasted-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-import-asyncio-import-http-1741210025157.txt  Pasted-import-os-import-logging-from-logging-handlers-import-RotatingFileHandler-import-httpx-import-io-fro-1741108404284.txt
