[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "async-lru>=2.0.4",
    "httpx>=0.28.1",
    "openai>=1.65.2",
    "pillow>=11.1.0",
    "python-telegram-bot>=21.11.1",
    "telegram>=0.0.1",
]
